--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -1,14 +1,14 @@
 doctype html
 html(lang='en')
   head
-    title Aqua - A website and user system (Hapi/React/Flux)
+    title Aqua - A website and user system starter
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='shortcut icon', href='favicon.ico')
     link(rel='stylesheet', href='public/build.css')
   body
     div.jumbotron
       h1.text-center Aqua
-      h2.text-center A website and user system
+      h2.text-center A website and user system starter
       p.text-center: a.btn.btn-primary.btn-lg(href='https://getaqua.herokuapp.com/')
         |Live Demo on Heroku
       ul.project-links
