less import from NODE_PATH or local node_modules. Fixes jedireza/aqua#67

--- a/client/pages/home/index.less
+++ b/client/pages/home/index.less
@@ -1,4 +1,4 @@
-@import "../../../node_modules/bootstrap/less/variables.less";
+@import "bootstrap/less/variables.less";
 
 .jumbotron {
     background-color: transparent;
