--- a/client/core/bootstrap.less
+++ b/client/core/bootstrap.less
@@ -1,50 +1,50 @@
 // Core variables and mixins
-@import "../../node_modules/bootstrap/less/variables.less";
-@import "../../node_modules/bootstrap/less/mixins.less";
+@import "bootstrap/less/variables.less";
+@import "bootstrap/less/mixins.less";
 
 // Reset and dependencies
-@import "../../node_modules/bootstrap/less/normalize.less";
-@import "../../node_modules/bootstrap/less/print.less";
-@import "../../node_modules/bootstrap/less/glyphicons.less";
+@import "bootstrap/less/normalize.less";
+@import "bootstrap/less/print.less";
+@import "bootstrap/less/glyphicons.less";
 
 // Core CSS
-@import "../../node_modules/bootstrap/less/scaffolding.less";
-@import "../../node_modules/bootstrap/less/type.less";
-@import "../../node_modules/bootstrap/less/code.less";
-@import "../../node_modules/bootstrap/less/grid.less";
-@import "../../node_modules/bootstrap/less/tables.less";
-@import "../../node_modules/bootstrap/less/forms.less";
-@import "../../node_modules/bootstrap/less/buttons.less";
+@import "bootstrap/less/scaffolding.less";
+@import "bootstrap/less/type.less";
+@import "bootstrap/less/code.less";
+@import "bootstrap/less/grid.less";
+@import "bootstrap/less/tables.less";
+@import "bootstrap/less/forms.less";
+@import "bootstrap/less/buttons.less";
 
 // Components
-@import "../../node_modules/bootstrap/less/component-animations.less";
-@import "../../node_modules/bootstrap/less/dropdowns.less";
-@import "../../node_modules/bootstrap/less/button-groups.less";
-@import "../../node_modules/bootstrap/less/input-groups.less";
-@import "../../node_modules/bootstrap/less/navs.less";
-@import "../../node_modules/bootstrap/less/navbar.less";
-@import "../../node_modules/bootstrap/less/breadcrumbs.less";
-@import "../../node_modules/bootstrap/less/pagination.less";
-@import "../../node_modules/bootstrap/less/pager.less";
-@import "../../node_modules/bootstrap/less/labels.less";
-@import "../../node_modules/bootstrap/less/badges.less";
-@import "../../node_modules/bootstrap/less/jumbotron.less";
-@import "../../node_modules/bootstrap/less/thumbnails.less";
-@import "../../node_modules/bootstrap/less/alerts.less";
-@import "../../node_modules/bootstrap/less/progress-bars.less";
-@import "../../node_modules/bootstrap/less/media.less";
-@import "../../node_modules/bootstrap/less/list-group.less";
-@import "../../node_modules/bootstrap/less/panels.less";
-@import "../../node_modules/bootstrap/less/responsive-embed.less";
-@import "../../node_modules/bootstrap/less/wells.less";
-@import "../../node_modules/bootstrap/less/close.less";
+@import "bootstrap/less/component-animations.less";
+@import "bootstrap/less/dropdowns.less";
+@import "bootstrap/less/button-groups.less";
+@import "bootstrap/less/input-groups.less";
+@import "bootstrap/less/navs.less";
+@import "bootstrap/less/navbar.less";
+@import "bootstrap/less/breadcrumbs.less";
+@import "bootstrap/less/pagination.less";
+@import "bootstrap/less/pager.less";
+@import "bootstrap/less/labels.less";
+@import "bootstrap/less/badges.less";
+@import "bootstrap/less/jumbotron.less";
+@import "bootstrap/less/thumbnails.less";
+@import "bootstrap/less/alerts.less";
+@import "bootstrap/less/progress-bars.less";
+@import "bootstrap/less/media.less";
+@import "bootstrap/less/list-group.less";
+@import "bootstrap/less/panels.less";
+@import "bootstrap/less/responsive-embed.less";
+@import "bootstrap/less/wells.less";
+@import "bootstrap/less/close.less";
 
 // Components w/ JavaScript
-@import "../../node_modules/bootstrap/less/modals.less";
-@import "../../node_modules/bootstrap/less/tooltip.less";
-@import "../../node_modules/bootstrap/less/popovers.less";
-@import "../../node_modules/bootstrap/less/carousel.less";
+@import "bootstrap/less/modals.less";
+@import "bootstrap/less/tooltip.less";
+@import "bootstrap/less/popovers.less";
+@import "bootstrap/less/carousel.less";
 
 // Utility classes
-@import "../../node_modules/bootstrap/less/utilities.less";
-@import "../../node_modules/bootstrap/less/responsive-utilities.less";
+@import "bootstrap/less/utilities.less";
+@import "bootstrap/less/responsive-utilities.less";
