--- a/src/index.jade
+++ b/src/index.jade
@@ -77,73 +77,73 @@ html(lang='en')
       div.row
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/01.png")
+            img.img-responsive(src="public/screenshots/01.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/03.png")
+            img.img-responsive(src="public/screenshots/03.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/04.png")
+            img.img-responsive(src="public/screenshots/04.png")
       hr
       h2.text-center Authentication screens
       p.lead Login, forgot password and reset password
       div.row
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/05.png")
+            img.img-responsive(src="public/screenshots/05.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/06.png")
+            img.img-responsive(src="public/screenshots/06.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/07.png")
+            img.img-responsive(src="public/screenshots/07.png")
       hr
       h2.text-center The account area
       p.lead Mock dashboard and account settings
       div.row
         div.col-md-6
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/19.png")
+            img.img-responsive(src="public/screenshots/19.png")
         div.col-md-6
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/20.png")
+            img.img-responsive(src="public/screenshots/20.png")
       hr
       h2.text-center The administration area
       p.lead Manage users, accounts, admins, admin groups, and statuses
       div.row
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/08.png")
+            img.img-responsive(src="public/screenshots/08.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/09.png")
+            img.img-responsive(src="public/screenshots/09.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/10.png")
+            img.img-responsive(src="public/screenshots/10.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/11.png")
+            img.img-responsive(src="public/screenshots/11.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/12.png")
+            img.img-responsive(src="public/screenshots/12.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/13.png")
+            img.img-responsive(src="public/screenshots/13.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/14.png")
+            img.img-responsive(src="public/screenshots/14.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/15.png")
+            img.img-responsive(src="public/screenshots/15.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/16.png")
+            img.img-responsive(src="public/screenshots/16.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/17.png")
+            img.img-responsive(src="public/screenshots/17.png")
         div.col-md-4
           a.thumbnail(href="#screenModal" data-toggle="modal")
-            img.img-responsive(src="screenshots/18.png")
+            img.img-responsive(src="public/screenshots/18.png")
       hr
       h2.text-center Most importantly
       p.lead What you build with Aqua is more important than Aqua
@@ -158,4 +158,8 @@ html(lang='en')
           li: a(href='https://github.com/jedireza/aqua/issues?state=open') Submit issues
           li.muted ·
           li: a(href='#') Back to top
+    div.modal.fade#screenModal(tabindex="-1" role="dialog" aria-labelledby="screenModalLabel" aria-hidden="true")
+      div.modal-dialog
+        div.modal-content
+          img.img-responsive(src="#" data-dismiss="modal")
     script(src='public/build.js')
