--- a/src/index.less
+++ b/src/index.less
@@ -1,5 +1,5 @@
-@import '../../node_modules/bootstrap/less/variables.less';
-@import '../../node_modules/bootstrap/less/mixins.less';
+@import '../node_modules/bootstrap/less/variables.less';
+@import '../node_modules/bootstrap/less/mixins.less';
 
 .jumbotron {
   text-align: center;
