--- a/src/index.jade
+++ b/src/index.jade
@@ -15,9 +15,9 @@ html(lang='en')
         li: a(href='https://github.com/jedireza/aqua/') <i class="fa fa-github"></i> View GitHub Project
         li (Version 4.x)
       div.gh-btns
-        iframe(src='http://ghbtns.com/github-btn.html?user=jedireza&repo=aqua&type=watch&count=true&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='135px', height='30px')
-        iframe(src='http://ghbtns.com/github-btn.html?user=jedireza&repo=aqua&type=fork&count=true&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='125px', height='30px')
-        iframe(src='http://ghbtns.com/github-btn.html?user=jedireza&repo=aqua&type=follow&count=false&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='173px', height='30px')
+        iframe(src='//ghbtns.com/github-btn.html?user=jedireza&repo=aqua&type=watch&count=true&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='140px', height='30px')
+        iframe(src='//ghbtns.com/github-btn.html?user=jedireza&repo=aqua&type=fork&count=true&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='140px', height='30px')
+        iframe(src='//ghbtns.com/github-btn.html?user=jedireza&repo=aqua&type=follow&count=false&size=large', allowtransparency='true', frameborder='0', scrolling='0', width='173px', height='30px')
     div.container.marketing
       h2.text-center Core features
       p.lead A restful json API, data models and a few helpful utilities
